# qnet

./: .gitignore  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
config/: .env.example  default.yaml
docker/: Dockerfile  Dockerfile.dev  Dockerfile.frontend
docs/: architecture.md  rfc-qnet-001.md
frontend/: package.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: AlertsPanel.tsx  ControlPanel.tsx  MetricsPanel.tsx  NetworkVisualization.tsx
frontend/styles/: globals.css
qnet/: __init__.py
qnet/ai/: __init__.py  healer.py  predictor.py  router.py
qnet/api/: __init__.py  rest.py
qnet/cli/: __init__.py  commands.py
qnet/core/: __init__.py
qnet/core/network/: __init__.py  link.py  node.py  topology.py
qnet/core/quantum/: __init__.py  decoherence.py  entanglement.py  qubit.py  superposition.py  teleportation.py
qnet/core/simulation/: __init__.py  engine.py  monitor.py  scheduler.py
qnet/core/transport/: __init__.py  buffer.py  channel.py  packet.py
qnet/security/: __init__.py  attacks.py  cryptography.py  qkd.py
tests/: test_qnet.py
